--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                             <!-- Wrap the element that changes between pages (i.e. table - form) in a container
                                 for placement in the grid template. -->
                             <div id="insertedBox">
-                                <form method="post" action="http://courses.e-ce.uth.gr/ECE9124/process.php">
+                                <form method="post" action="https://courses.e-ce.uth.gr/ECE9124/process.php">
                                     <fieldset id="account">
                                         <legend>Account</legend>
                                         <div class="fieldItem">
@@ -332,7 +332,7 @@
 
         <footer class="item3"> 
             <div class="container">
-                <div class="footer-container"> <div id="footer-top"></div>
+                <div class="footer-container">
                     <div class="footer-item1">
                         <h4><i class="fas fa-info-circle"></i> About Us</h4>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>            
