--- a/index2.html
+++ b/index2.html
@@ -395,7 +395,7 @@
 
         <footer class="item3"> 
             <div class="container">
-                <div class="footer-container"> <div id="footer-top"></div>
+                <div class="footer-container">
                     <div class="footer-item1">
                         <h4><i class="fas fa-info-circle"></i> About Us</h4>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>            
