--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -14,7 +14,7 @@
             .main-container {
                 display: grid;
                 grid-template-areas: 'main' 'similar' 'aside';
-                grid-gap: 0 20px;
+                grid-gap: 20px;
                 padding: 10px;
             }
 
