--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -28,7 +28,7 @@
                 display: grid;
                 grid-template-columns: repeat(5, 1fr) 1.2fr;
                 grid-template-areas: 'main main main main main aside''similar similar similar similar similar aside';
-                grid-gap: 2rem;
+                grid-gap: 3%;
             }
 
             .container {
@@ -76,6 +76,8 @@
             .main-item1 {
                 grid-area: main;
                 display: grid;
+                grid-auto-rows: min-content;
+                align-content: stretch;
                 gap: 1rem 2rem;
                 grid-template-areas: 
                     "portrait-name portrait-name"
@@ -88,7 +90,7 @@
                 max-width: 1300px;
                 margin: auto;
                 /* γιατί υπερχείλιση περιεχομένου στο main??????
-                border: solid 1px#0963ae;*/
+                border: solid 1px#0963ae; */
             }
         }
         
@@ -150,7 +152,7 @@
     </style>
     <link href="css/all.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-
+    <link href="mobile.css" rel="stylesheet">
 </head>
 
 <body>
@@ -434,11 +436,11 @@
                         </div>
                     </div>
                     
-                    <div class="footer-item4">
-                        <h4><i class="fas fa-envelope"></i> Contact us <a href="#contact-form-appear" class="responsive-effects"><i class="fas fa-plus-circle"></i></a></h4>
+                    <div class="footer-item4" id="form-disappear">
+                        <h4><i class="fas fa-envelope"></i> Contact us <a href="#contact-form-appear" class="responsive-effects"><i class="fas fa-caret-square-up"></i></a></h4>
                         <fieldset id="contact-form-appear">  
                             <legend class="responsive-effects">Contact</legend> 
-                            <form> <a tabindex= "1" href="#footer-top" class="close"></a>
+                            <form> <a tabindex= "1" href="#form-disappear" class="close"></a>
                                 <div class="field">
                                     <label for="name">Name</label>
                                     <input type="text" id="name" class="input" name="name" placeholder="Enter Name ..." pattern="[A-Za-z\.\- ]+[A-Za-z]$" title="only a-z A-Z . -">
