--- a/index.html
+++ b/index.html
@@ -435,12 +435,12 @@
                             <em>23 minutes ago</em>
                         </div>
                     </div>
-                    
-                    <div class="footer-item4">
-                        <h4><i class="fas fa-envelope"></i> Contact us <a href="#contact-form-appear" class="responsive-effects"><i class="fas fa-plus-circle"></i></a></h4>
+                                     
+                    <div class="footer-item4" id="form-disappear">
+                        <h4><i class="fas fa-envelope"></i> Contact us <a href="#contact-form-appear" class="responsive-effects"><i class="fas fa-caret-square-up"></i></a></h4>
                         <fieldset id="contact-form-appear">  
                             <legend class="responsive-effects">Contact</legend> 
-                            <form> <a tabindex= "1" href="#footer-top" class="close"></a>
+                            <form> <a tabindex= "1" href="#form-disappear" class="close"></a>
                                 <div class="field">
                                     <label for="name">Name</label>
                                     <input type="text" id="name" class="input" name="name" placeholder="Enter Name ..." pattern="[A-Za-z\.\- ]+[A-Za-z]$" title="only a-z A-Z . -">
